node and ts driving me fucking nuts, swap to bun probably later

--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
     "apps/front",
     "apps/api",
     "apps/auth-provider"
-  ]
+  ],
+  "dependencies": {
+    "pm2": "^5.3.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3"
+  }
 }
