--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,9 +3,20 @@
   "version": "1.0.0",
   "description": "Backend for the application",
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
+    "start": "ts-node src/index.ts",
+    "dev": "pm2 start ./pm2-npm.js --name dev-api -- start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/koa__router": "^12.0.4",
+    "ts-node": "^10.9.2"
+  },
+  "dependencies": {
+    "@koa/router": "^13.1.0",
+    "koa": "^2.15.3"
+  }
 }
