--- a/apps/auth-provider/package.json
+++ b/apps/auth-provider/package.json
@@ -2,10 +2,19 @@
   "name": "auth-provider",
   "version": "1.0.0",
   "description": "API for providing and validating authentication",
-  "main": "index.js",
+  "main": "src/index.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/koa__router": "^12.0.4",
+    "ts-node": "^10.9.2"
+  },
+  "dependencies": {
+    "@koa/router": "^13.1.0",
+    "koa": "^2.15.3"
+  }
 }
