--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,15 +5,15 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "pm2 start ./pm2-npm.js --name dev-api -- start",
+    "start": "bun src/index.ts",
+    "dev": "pm2 start ecosystem.config.cjs --only dev-api",
+    "build": "bun build ./src/index.ts --outdir dist --target node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/koa__router": "^12.0.4",
-    "ts-node": "^10.9.2"
+    "@types/koa__router": "^12.0.4"
   },
   "dependencies": {
     "@koa/router": "^13.1.0",
