--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -6,8 +6,8 @@
     "sourceMap": true,
     "rootDir": "./src",
     "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "isolatedModules": true,
     "esModuleInterop": true,
     "noEmit": true,
