--- a/apps/auth-provider/package.json
+++ b/apps/auth-provider/package.json
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/koa__router": "^12.0.4",
-    "ts-node": "^10.9.2"
+    "@types/koa__router": "^12.0.4"
   },
   "dependencies": {
     "@koa/router": "^13.1.0",
