--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "apps/auth-provider"
   ],
   "dependencies": {
-    "pm2": "^5.3.0"
+    "pm2": "^5.4.2"
   },
   "devDependencies": {
+    "bun": "^1.1.30",
     "typescript": "^5.6.3"
   }
 }
