--- a/apps/auth-provider/package.json
+++ b/apps/auth-provider/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
+    "dev": "echo \"Error: no dev command specified\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
