--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/koa__router": "^12.0.4"
+    "@types/koa__router": "^12.0.4",
+    "@types/koa-bodyparser": "^4.3.12"
   },
   "dependencies": {
     "@koa/router": "^13.1.0",
-    "koa": "^2.15.3"
+    "koa": "^2.15.3",
+    "koa-bodyparser": "^4.4.1"
   }
 }
