--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,12 +13,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/koa__router": "^12.0.4",
-    "@types/koa-bodyparser": "^4.3.12"
+    "@fbgfi/types": "*",
+    "@types/koa__router": "^12.0.4"
   },
   "dependencies": {
+    "@fbgfi/middleware": "*",
+    "@fbgfi/constants": "*",
     "@koa/router": "^13.1.0",
-    "koa": "^2.15.3",
-    "koa-bodyparser": "^4.4.1"
+    "koa": "^2.15.3"
   }
 }
